--- a/public/swagger/index.html
+++ b/public/swagger/index.html
@@ -74,7 +74,7 @@ window.onload = function() {
   
   // Build a system
   const ui = SwaggerUIBundle({
-    url: "http://localhost:3000/docs/index.json",
+    url: "http://localhost:3000/docs/index.yaml",
     dom_id: '#swagger-ui',
     deepLinking: true,
     presets: [
